[package]

name = "cult"
version = "0.0.1"
authors = ["Paul Adenot <paul@paul.cx>"]

description = "cubeb bindings for rust"

# These URLs point to more information about the repository
documentation = "https://github.com/padenot/cult/blob/master/README.md"
homepage = "https://github.com/padenot/cult/blob/master/README.md"
repository = "https://github.com/padenot/cult/"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["audio", "binding"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT"

[dependencies]
libc="*"
